# DPCPP-6

01/1/: CMakeLists.txt  main.cc
01/1/include/: sql_query_builder.hh
01/1/source/: sql_query_builder.cc
01/2/: CMakeLists.txt  main.cc
01/2/include/: sql_query_builder.hh
01/2/source/: sql_query_builder.cc
